--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body{
     background-color: #e3f2fd;
     font-family: "Poppins", sans-serif;
+    overflow: hidden;
 }
 
 .container{
@@ -17,7 +18,7 @@ body{
     width: 100%;
     border-radius: 8px;
     padding: 25px;
-    margin: 85px auto 0;
+    margin: 5px auto 0;
     background-color: #fff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
